force-app/main/default/objects/Data_Approval_Request_Fields__c/Data_Approval_Request_Fields__c.object-meta.xml
<CustomObject>
    <label>Data Approval Request Field</label>
    <nameField>
        <displayFormat>DARF-{00000000}</displayFormat>
        <label>DAR Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Approval Request Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>