force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Approved_Value__c.field-meta.xml
<CustomField>
    <fullName>Approved_Value__c</fullName>
    <label>Approved Value</label>
    <length>52</length>
    <type>Text</type>
</CustomField>