force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <length>52</length>
    <type>Text</type>
</CustomField>