force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Data_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Data_Approval_Request__c</fullName>
    <label>Data Approval Request</label>
    <referenceTo>Data_Approval_Request__c</referenceTo>
    <relationshipLabel>Data Approval Request Fields</relationshipLabel>
    <relationshipName>Data_Approval_Request_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>