force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <label>Field API</label>
    <length>52</length>
    <type>Text</type>
</CustomField>