force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>52</length>
    <type>Text</type>
</CustomField>