force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>DARF-{000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>