force-app/main/default/objects/Data_Approval_Request_Fields__c/fields/Requested_Value__c.field-meta.xml
<CustomField>
    <fullName>Requested_Value__c</fullName>
    <label>Requested Value</label>
    <length>52</length>
    <type>Text</type>
</CustomField>